fix: QTree (v0.15) - Better alignment for empty root node #1317

--- a/src/components/tree/tree.ios.styl
+++ b/src/components/tree/tree.ios.styl
@@ -89,3 +89,6 @@ body.desktop
     padding 0
     &:after, > .q-tree-node-header:before
       display none
+  // leave space for root empty node
+  > .q-tree-node-child > .q-tree-node-header
+    padding-left 24px
